syntax = "proto3";

package yql;

message ExecuteRequest {
  string sql = 1;
}

message ExecuteResponse {
  message DataSet {
    bytes dataset = 1;
  }

  message Metrics {
    int64 start_time = 1;
    int64 end_time = 2;
    int64 num_input_rows = 3;
    int64 num_output_rows = 4;
  }

  message Error {
    string error = 1;
  }

  oneof item {
      DataSet dataset = 1;
      Metrics metrics = 2;
      Error error = 3;
  }
}

service Yql {
  rpc Execute(ExecuteRequest) returns (stream ExecuteResponse) {}
}